# SUBDIRS = 

# DISTCLEANFILES = config-auto.h

libpcffsocketincludedir = $(includedir)/pcff/socket
libpcffsocketinclude_HEADERS =  \
	BaseSocket.h \
	Buffer.h \
	ByteBuffer.h \
    CIDRAddress.h \
	DatagramSocket.h \
	INETAddress.h \
	IPv4SocketAddress.h \
	IPv6SocketAddress.h \
	ProxyServer.h \
	ProxyServerThread.h \
	Server.h \
	ServerThread.h \
	Socket.h \
	SocketAddress.h \
	SocketExceptions.h \
	UnixSocket.h \
	UnixDatagramSocket.h \
	UnixSocketAddress.h
