# SUBDIRS = 

# DISTCLEANFILES = config-auto.h

libpcffthreadincludedir = $(includedir)/pcff/thread
libpcffthreadinclude_HEADERS =  \
               Mutex.h \
               ThreadComponent.h \
               Thread.h \
               ThreadDirector.h \
               ConnectionPool.h \
               ConnectionPoolItem.h \
               Condition.h \
               ServerPool.h \
               ServerPoolThread.h \
               ThreadExceptionMgr.h

