SUBDIRS = honeytrap snort

# DISTCLEANFILES = config-auto.h

libpcsecnetworkincludedir = $(includedir)/pcsec/network
libpcsecnetworkinclude_HEADERS =  \
   ArpHeaderInfo.h \
   AttackConnectionData.h \
   AttackData.h \
   AttackDownloadData.h \
   AttackPayloadData.h \
   EthernetArpInfo.h \
   EthernetHeaderInfo.h \
   HoneytrapDefaultEventProcessor.h \
   HoneytrapEvent.h \
   HoneytrapUnixSocketIngestor.h \
   ICMPHeaderInfo.h \
   ICMPInfo.h \
   IPHeaderInfo.h \
   NetworkPacketInfo.h \
   PcapDefaultEventProcessor.h \
   PcapEvent.h \
   PcapException.h \
   PcapIngestor.h \
   PcapLiveIngestor.h \
   PcapOfflineIngestor.h \
   PcapProxyServiceFactory.h \
   SilkDatastore.h \
   SilkDatastoreIngestor.h \
   SilkDefaultEventProcessor.h \
   SilkException.h \
   SilkFile.h \
   SilkFileIngestor.h \
   SilkInterfaceDirector.h \
   SilkProxyServiceFactory.h \
   SilkRecord.h \
   SilkSocketOutputEventProcessor.h \
   SnortDefaultEventProcessor.h \
   SnortEvent.h \
   SnortProxyServiceFactory.h \
   SnortUnifiedFileIngestor.h \
   SnortUnixSocketIngestor.h \
   TCPHeaderInfo.h \
   UDPHeaderInfo.h \
   WifiHeaderInfo.h
   
